force-app/main/default/objects/TaskParameterValue__c/TaskParameterValue__c.object-meta.xml
<CustomObject>
    <label>Task Parameter Value</label>
    <nameField>
        <displayFormat>TPV-{00000}</displayFormat>
        <label>Task Parameter Value</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Parameter Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>