force-app/main/default/objects/TaskParameterValue__c/fields/BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>