force-app/main/default/objects/TaskParameterValue__c/fields/IntegerValue__c.field-meta.xml
<CustomField>
    <fullName>IntegerValue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Integer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>