force-app/main/default/objects/TaskParameterValue__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipName>ParameterValues</relationshipName>
    <type>Lookup</type>
</CustomField>