force-app/main/default/objects/TaskParameterValue__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Parameter Template</label>
    <referenceTo>TaskParameterTemplate__c</referenceTo>
    <relationshipName>TaskParameters</relationshipName>
    <type>Lookup</type>
</CustomField>